--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "verify": "npx hardhat verify --network base"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
     "canvas": "^2.11.2",
-    "ethers": "^6.8.1",
-    "redis": "^4.6.10",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.0"
+    "ethers": "^6.8.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomicfoundation/hardhat-toolbox": "2.0.0",
     "hardhat": "^2.17.2",
     "nodemon": "^3.0.1"
   }
