--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "verify": "npx hardhat verify --network base"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "canvas": "^2.11.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "ethers": "^5.7.2",
     "express": "^4.18.2",
+    "canvas": "^2.11.2",
+    "ethers": "^5.7.2",
+    "redis": "^4.6.10",
+    "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "redis": "^4.6.10"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "2.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.2",
     "hardhat": "^2.17.2",
     "nodemon": "^3.0.1"
   }
