--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,13 +6,16 @@ NODE_ENV=production
 # Database
 REDIS_URL=redis://localhost:6379
 
-# Blockchain
-RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
-PRIVATE_KEY=your_private_key_here
+# Blockchain - Base Mainnet
+RPC_URL=https://mainnet.base.org
+CHAIN_ID=8453
+NETWORK_NAME=base
+
+# Contract Addresses (you'll get these after deployment)
 GAME_CONTRACT_ADDRESS=0x...
 NFT_CONTRACT_ADDRESS=0x...
 
-# IPFS (Pinata)
+# IPFS (Pinata) - for NFT metadata storage
 PINATA_JWT=your_pinata_jwt_here
 PINATA_API_KEY=your_pinata_api_key
 PINATA_SECRET_KEY=your_pinata_secret_key
@@ -20,7 +23,18 @@ PINATA_SECRET_KEY=your_pinata_secret_key
 # Game Configuration
 SPIN_COOLDOWN=3600
 MAX_DAILY_SPINS=5
+MINIMUM_SPIN_FEE=0.001  # ETH - optional minimum fee on Base
+TREASURY_ADDRESS=0x...   # Where collected fees go (if any)
 
-# Security
-CORS_ORIGIN=https://warpcast.com
+# Security & CORS
+CORS_ORIGIN=https://warpcast.com,https://your-frontend-domain.com
 FRAME_SIGNATURE_SECRET=your_frame_secret_here
+JWT_SECRET=your_jwt_secret_for_user_sessions
+
+# Optional: Analytics & Monitoring
+MIXPANEL_TOKEN=your_mixpanel_token
+SENTRY_DSN=your_sentry_dsn
+
+# Optional: Rate Limiting
+RATE_LIMIT_WINDOW=900000  # 15 minutes in ms
+RATE_LIMIT_MAX_REQUESTS=100
