--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
-
+PORT=3001
+RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
+GAME_CONTRACT_ADDRESS=
+NFT_CONTRACT_ADDRESS=
+SIGNING_PRIVATE_KEY=your_private_key_for_signing
+BASE_URL=http://localhost:3001
+PINATA_JWT=your_pinata_jwt_token
